fix wrapping so it's not a default

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 .nav > li > img {
     height: 75px;
     border: solid 3px #1F2937;
-    border-style:outset;
+    border-style: outset;
 }
 
 li:nth-child(1){
@@ -118,6 +118,7 @@ button {
     align-items: center;
     margin-top: 0;
     margin-bottom: 0;
+    padding: 18px;
 }
 
 .list_about {
@@ -133,8 +134,8 @@ button {
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    width: 25%;
-    padding: 32px ;
+    width: 22%;
+    padding: 18px;
 }
 
 .about_img > img {
